Wstępne utworzenie nagłówka strony

--- a/index.html
+++ b/index.html
@@ -45,13 +45,17 @@
   </script>
 
   <!-- Nagłówek strony: menu, logo, breadcrumbs itp. -->
-  <div class="container">
-    <i class="fas fa-check-circle"></i>
-    Klasa .container użyta została przykładowo, jeżeli Twój projekt wymaga .container-fluid
-    lub w ogóle rezygnuje z kontenerów, zmień ją.<br>
-    <i class="fas fa-check-circle"></i>
-    Nie muszisz trzymać się sztywnego podziału na trzy sekcje szablonu (nagłowek, treść, stopka).
+  <div class="d-flex justify-content-center top">
+    <h1 id="logo">Absolwent</h1>
   </div>
+
+  <nav class="nav d-flex justify-content-center bgnav">
+    <a class="nav-link mr-5" href="#">Strona główna</a>
+    <a class="nav-link mr-5" href="#">Absolwenci</a>
+    <a class="nav-link mr-5" href="#">Działania</a>
+    <a class="nav-link mr-5" href="#">Dokumenty</a>
+    <a class="nav-link mr-5" href="#">Historia</a>
+  </nav>
 
   <!-- Treść główna -->
   <div class="container">
