--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Szablon Bootstrapa</title>
 
+  <!-- Czcionki -->
+  <link href="https://fonts.googleapis.com/css?family=Archivo" rel="stylesheet">
+
   <!-- Bootstrap -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
 
@@ -45,17 +48,31 @@
   </script>
 
   <!-- Nagłówek strony: menu, logo, breadcrumbs itp. -->
-  <div class="d-flex justify-content-center top">
-    <h1 id="logo">Absolwent</h1>
-  </div>
-
-  <nav class="nav d-flex justify-content-center bgnav">
-    <a class="nav-link mr-5" href="#">Strona główna</a>
-    <a class="nav-link mr-5" href="#">Absolwenci</a>
-    <a class="nav-link mr-5" href="#">Działania</a>
-    <a class="nav-link mr-5" href="#">Dokumenty</a>
-    <a class="nav-link mr-5" href="#">Historia</a>
-  </nav>
+  <nav class="navbar navbar-expand-lg navbar-light bg-nav">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <img src="img/logo.png" width="80" height="80">
+        <span class="textsize textpadding fonttype">Collegium Gostomianum</span>
+        <span class="abspadding">Absolwent</span>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav navsize fonttype">
+          <li class="nav-item libordertwo navpadding">
+            <a class="nav-link" href="#">Wydarzenia</a>
+          </li>
+          <li class="nav-item liborderone navpadding">
+            <a class="nav-link" href="#">Kontakt</a>
+          </li>
+          <li class="nav-item liborderthree navpadding">
+            <a class="nav-link" href="#">Zaloguj się</a>
+          </li>
+        </ul>
+      </div>
+    </div>  
+</nav>
 
   <!-- Treść główna -->
   <div class="container">
