--- a/index.html
+++ b/index.html
@@ -52,8 +52,11 @@
     <div class="container">
       <a class="navbar-brand" href="#">
         <img src="img/logo.png" width="80" height="80">
-        <span class="textsize textpadding fonttype">Collegium Gostomianum</span>
-        <span class="abspadding">Absolwent</span>
+        <div class="flt">
+          <span class="textsize textpadding fonttype">Collegium Gostomianum</span><br>
+          <span class="abspadding fonttype abssize">Absolwent</span>
+        </div>
+        
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
