Dodanie drugiej kolumny do footbara

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 <div class="container">
   <div class="text-white bg-dark">
     <div class="row">
-      <div class="p-5 col-md-12">
+      <div class="p-5 col-md-4">
         <i class="material-icons mb-3" style="font-size: 125px">school</i>
         <h3 class="mb-4">Absolwent
           <br>
@@ -139,6 +139,26 @@
           <br>
           <a href="#" class="text-white">Zaloguj się</a>
         </ul>
+      </div>
+      <div class="p-5 col-md-8">
+        <h3>Chcesz być na bieżąco?</h3>
+        <form class="my-4">
+          <fieldset class="form-group">
+            Otrzymuj informacje o Collegium Gostomianum
+            <br>
+            <input type="email" class="form-control" placeholder="Podaj email"></fieldset>
+          <button type="submit" class="btn btn-outline-light">Wyślij</button>
+        </form>
+        <h3 class="mt-5">Kontakt
+          <br>
+        </h3>
+        <div class="col-12 my-3 px-0">
+          I Liceum Ogólnokształcące Collegium Gostomianum
+          <br>
+          ul. Jana Długosza 7
+          <br>
+          27-600 Sandomierz
+        </div>
       </div>
     </div>
     <div class="row">
