--- a/index.html
+++ b/index.html
@@ -117,8 +117,32 @@
 </div>
 
 <!-- Treść główna -->
-<div class="container">
-
+<div class="container-fluid" style="padding: 0;">
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="5500" data-pause="false">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100 cimgsize" src="img/testowe.png" alt="Pierwszy slajd">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Test1</h5>
+            <p>Test1</p>
+          </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100 cimgsize" src="img/testowe.png" alt="Drugi slajde">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Test2</h5>
+            <p>Test2</p>
+          </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100 cimgsize" src="img/testowe.png" alt="Trzeci slajd">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Test3</h5>
+            <p>Test3</p>
+          </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 <!-- Stopka strony: copyrights, dodatkowe linki itp. -->
