Uzupelnienie sekcji kontakt i dodanie noty copyright

--- a/index.html
+++ b/index.html
@@ -159,8 +159,6 @@
           <br>
           <a href="#" class="text-white">Wydarzenia</a>
           <br>
-          <a href="#" class="text-white">Kontakt</a>
-          <br>
           <a href="#" class="text-white">Zaloguj się</a>
         </ul>
       </div>
@@ -183,11 +181,27 @@
           <br>
           27-600 Sandomierz
         </div>
+
+        <div class="row my-2 px-3">
+
+          <div class="col-lg-6 my-3 px-0">
+          <i class="fas fa-phone"></i>
+          <a href="tel:158325246" class="text-white">(15) 832-52-45</a>
+          </div>
+
+          <div class="col-lg-6 my-3 px-0">
+            <i class="fas fa-envelope"></i>
+            <a href="mailto:1losand@lo1.sandomierz.pl" class="text-white">1losand@lo1.sandomierz.pl</a>
+          </div>
+
+        </div>
+
+
       </div>
     </div>
     <div class="row">
       <div class="col-md-12 mt-4">
-        <p class="text-center">Notka Copyright</p>
+        <p class="text-center">© Copyright 2018 Marcin Zasuwa, Marcin Saja, Piotr Nowak - Wszelkie Prawa Zastrzeżone.</p>
       </div>
     </div>
   </div>
