--- a/index.html
+++ b/index.html
@@ -144,6 +144,87 @@
     </div>
   </div>
 </div>
+<div class="container">
+  <div class="row">
+    <div class="col-5">
+      <h2>Nadchodzące wydarzenia</h2>
+      <div>
+        <div class="row datelist">
+          <div class="col-sm-3">
+            <div class="date">
+              <div class="month">
+                <span class="monthtext">STY</span>
+              </div>
+              <span class="daytext">01</span>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="title">
+              <span>Tytuł</span>
+            </div>
+            <div class="time">
+              <span class="timetext">00:00 - 23:59</span>
+            </div>
+          </div>
+        </div>
+        <div class="row datelist">
+          <div class="col-sm-3">
+            <div class="date">
+              <div class="month">
+                <span class="monthtext">STY</span>
+              </div>
+              <span class="daytext">01</span>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="title">
+              <span>Tytuł</span>
+            </div>
+            <div class="time">
+              <span class="timetext">00:00 - 23:59</span>
+            </div>
+          </div>
+        </div>
+        <div class="row datelist">
+          <div class="col-sm-3">
+            <div class="date">
+              <div class="month">
+                <span class="monthtext">STY</span>
+              </div>
+              <span class="daytext">01</span>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="title">
+              <span>Tytuł</span>
+            </div>
+            <div class="time">
+              <span class="timetext">00:00 - 23:59</span>
+            </div>
+          </div>
+        </div>
+        <div class="row datelist">
+          <div class="col-sm-3">
+            <div class="date">
+              <div class="month">
+                <span class="monthtext">STY</span>
+              </div>
+              <span class="daytext">01</span>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="title">
+              <span>Tytuł</span>
+            </div>
+            <div class="time">
+              <span class="timetext">00:00 - 23:59</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 <!-- Stopka strony: copyrights, dodatkowe linki itp. -->
 <div class="container">
