Poprawienie wygladu i responsywnosci panelu z nadchodzacymi wydarzeniami

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <!-- Czcionki -->
   <link href="https://fonts.googleapis.com/css?family=Archivo" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Quicksand:500|Sansita:700&amp;subset=latin-ext" rel="stylesheet">
 
   <!-- Bootstrap -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -145,85 +146,87 @@
   </div>
 </div>
 <div class="container">
-  <div class="row">
-    <div class="col-5">
-      <h2>Nadchodzące wydarzenia</h2>
-      <div>
-        <div class="row datelist">
-          <div class="col-sm-3">
-            <div class="date">
-              <div class="month">
-                <span class="monthtext">STY</span>
+      <div class="events">
+        <h1 class="eheading">NADCHODZĄCE WYDARZENIA</h1>
+        <div>
+          <div class="row datelist">
+              <div class="date">
+                <div class="month">
+                  <p class="monthtext">STY</p>
+                </div>
+                <div class="day">
+                  <p class="daytext">01</p>
+                </div>
               </div>
-              <span class="daytext">01</span>
-            </div>
-          </div>
-          <div class="col-sm-6">
-            <div class="title">
-              <span>Tytuł</span>
-            </div>
-            <div class="time">
-              <span class="timetext">00:00 - 23:59</span>
-            </div>
-          </div>
-        </div>
-        <div class="row datelist">
-          <div class="col-sm-3">
-            <div class="date">
-              <div class="month">
-                <span class="monthtext">STY</span>
+            <div class="esubtitles">
+              <div class="title">
+                <span>Lorem ipsum dolor sit</span>
               </div>
-              <span class="daytext">01</span>
-            </div>
-          </div>
-          <div class="col-sm-6">
-            <div class="title">
-              <span>Tytuł</span>
-            </div>
-            <div class="time">
-              <span class="timetext">00:00 - 23:59</span>
-            </div>
-          </div>
-        </div>
-        <div class="row datelist">
-          <div class="col-sm-3">
-            <div class="date">
-              <div class="month">
-                <span class="monthtext">STY</span>
+              <div class="time">
+                <span class="timetext">00:00 - 23:59</span>
               </div>
-              <span class="daytext">01</span>
             </div>
           </div>
-          <div class="col-sm-6">
-            <div class="title">
-              <span>Tytuł</span>
-            </div>
-            <div class="time">
-              <span class="timetext">00:00 - 23:59</span>
-            </div>
-          </div>
-        </div>
-        <div class="row datelist">
-          <div class="col-sm-3">
-            <div class="date">
-              <div class="month">
-                <span class="monthtext">STY</span>
+          <div class="row datelist">
+              <div class="date">
+                <div class="month">
+                  <p class="monthtext">STY</p>
+                </div>
+                <div class="day">
+                  <p class="daytext">01</p>
+                </div>
               </div>
-              <span class="daytext">01</span>
+            <div class="esubtitles">
+              <div class="title">
+                <span>Lorem ipsum dolor sit</span>
+              </div>
+              <div class="time">
+                <span class="timetext">00:00 - 23:59</span>
+              </div>
             </div>
           </div>
-          <div class="col-sm-6">
-            <div class="title">
-              <span>Tytuł</span>
+          <div class="row datelist">
+              <div class="date">
+                <div class="month">
+                  <p class="monthtext">STY</p>
+                </div>
+                <div class="day">
+                  <p class="daytext">01</p>
+                </div>
+              </div>
+            <div class="esubtitles">
+              <div class="title">
+                <span>Lorem ipsum dolor sit</span>
+              </div>
+              <div class="time">
+                <span class="timetext">00:00 - 23:59</span>
+              </div>
             </div>
-            <div class="time">
-              <span class="timetext">00:00 - 23:59</span>
+          </div>
+          <div class="row datelist">
+              <div class="date">
+                <div class="month">
+                  <p class="monthtext">STY</p>
+                </div>
+                <div class="day">
+                  <p class="daytext">01</p>
+                </div>
+              </div>
+            <div class="esubtitles">
+              <div class="title">
+                <span>Lorem ipsum dolor sit</span>
+              </div>
+              <div class="time">
+                <span class="timetext">00:00 - 23:59</span>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
+      <div class="test">
+        <p>test</p>
+      </div>
+      <div class="clear"></div>
 </div>
 
 <!-- Stopka strony: copyrights, dodatkowe linki itp. -->
