Dodanie prototypu panelu z najnowszymi wiadomosciami i ogloszeniami

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
 <div class="container">
   <div class="events">
-    <h1 class="eheading">NADCHODZĄCE WYDARZENIA</h1>
+    <h1 class="sectionheading">NADCHODZĄCE WYDARZENIA</h1>
     <div>
       <div class="row datelist">
         <div class="date">
@@ -224,8 +224,53 @@
       </div>
     </div>
   </div>
-  <div class="test">
-    <p>test</p>
+
+  <div class="news">
+    <h1 class="sectionheading">NAJNOWSZE WIADOMOŚCI I OGŁOSZENIA</h1>
+    <div>
+      <div class="row newscontent">
+        <div class="col newsimages">
+          <img src="img/testowe2.png" alt="Zdjecie" class="nimages">
+        </div>
+        <div class="col newstext">
+          <h1 class="newsheading">Lorem ipsum dolor sit amet</h1>
+          <p class="newsdescription">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </div>
+    </div>
+    <div>
+      <div class="row newscontent">
+        <div class="col newsimages">
+          <img src="img/testowe3.png" alt="Zdjecie" class="nimages">
+        </div>
+        <div class="col newstext">
+          <h1 class="newsheading">Lorem ipsum dolor sit amet</h1>
+          <p class="newsdescription">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </div>
+    </div>
+    <div>
+      <div class="row newscontent">
+        <div class="col newsimages">
+          <img src="img/testowe4.png" alt="Zdjecie" class="nimages">
+        </div>
+        <div class="col newstext">
+          <h1 class="newsheading">Lorem ipsum dolor sit amet</h1>
+          <p class="newsdescription">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </div>
+    </div>
+    <div>
+      <div class="row newscontent">
+        <div class="col newsimages">
+          <img src="img/testowe2.png" alt="Zdjecie" class="nimages">
+        </div>
+        <div class="col newstext">
+          <h1 class="newsheading">Lorem ipsum dolor sit amet</h1>
+          <p class="newsdescription">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="clear"></div>
 </div>
