Poprawa responsywnosci formularza rejestracji

--- a/login.html
+++ b/login.html
@@ -118,17 +118,15 @@
 
 <!-- Treść główna -->
 
-<!--TODO Poprawienie responsywności-->
+<div class="container col-md-6 px-auto py-5">
 
-<div class="container col-md-6 px-4 py-5">
-
-  <div class="container col-lg-6 px-5">
-  <button class="btn btn-secondary mr-3" id="login">Zaloguj się</button>
-  <button class="btn btn-secondary ml-3" id="signin">Zarejestruj się</button>
+  <div class="container col-xs-4 px-5">
+  <button class="btn btn-secondary my-1" id="login">Zaloguj się</button>
+  <button class="btn btn-secondary my-1" id="signin">Zarejestruj się</button>
   </div>
   <hr>
 
-<div class="container col-md-6 px-5" id="log-form" style="display: block">
+<div class="container col px-5" id="log-form" style="display: block">
   <form>
   <div class="form-group">
     <label for="email-log">Adres email:</label>
@@ -141,7 +139,7 @@
   <div class="checkbox">
     <label class="pb-2"><input type="checkbox">Zapamiętaj mnie</label>
   </div>
-  <button type="submit" class="btn btn-primary">Zaloguj się</button>
+  <button type="submit" class="btn btn-primary py-1">Zaloguj się</button>
 
   <div class="form-group pt-2">
     <a href="#">Zapomniałeś hasła?</a>
@@ -149,7 +147,7 @@
 </form>
 </div>
 
-<div class="container col-md-6 px-5" id="sign-form" style="display: none">
+<div class="container col px-5" id="sign-form" style="display: none">
 <form>
   <div class="form-group">
     <label for="name">Imię:</label>
