--- a/gallery.html
+++ b/gallery.html
@@ -127,62 +127,269 @@
     <h2 class="mb-5">← 2018 →</h2>
   </div>
 
-  <div class="container-fluid text-center mb-4">
-    <img src="img/cg1.jpg" class="rounded galleryimg" width="250" height="250">
-    <img src="img/cg1.jpg" class="rounded galleryimg mx-3" width="250" height="250">
-    <img src="img/cg1.jpg" class="rounded galleryimg" width="250" height="250">
-    <img src="img/cg1.jpg" class="rounded galleryimg mx-3" width="250" height="250">
-    <img src="img/cg1.jpg" class="rounded galleryimg" width="250" height="250">
+<div class="row text-center mb-2">
+  <div class="col-md-3">
+    <div class="thumbnail galleryimg galleryborder">
+      <a href="img/cg2.jpg">
+        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
+        <div class="caption">
+          <p class="galleryfont">Lorem ipsum...</p>
+        </div>
+      </a>
+    </div>
   </div>
+  <div class="col-md-3">
+    <div class="thumbnail galleryimg galleryborder">
+      <a href="img/cg2.jpg">
+        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
+        <div class="caption">
+          <p class="galleryfont">Lorem ipsum...</p>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-md-3">
+    <div class="thumbnail galleryimg galleryborder">
+      <a href="img/cg2.jpg">
+        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
+        <div class="caption">
+          <p class="galleryfont">Lorem ipsum...</p>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-md-3">
+    <div class="thumbnail galleryimg galleryborder">
+      <a href="img/cg2.jpg">
+        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
+        <div class="caption">
+          <p class="galleryfont">Lorem ipsum...</p>
+        </div>
+      </a>
+    </div>
+  </div>
+</div>
 
-  <div class="container-fluid text-center mb-4">
-    <img src="img/cg1.jpg" class="rounded galleryimg" width="250" height="250">
-    <img src="img/cg1.jpg" class="rounded galleryimg mx-3" width="250" height="250">
-    <img src="img/cg1.jpg" class="rounded galleryimg" width="250" height="250">
-    <img src="img/cg1.jpg" class="rounded galleryimg mx-3" width="250" height="250">
-    <img src="img/cg1.jpg" class="rounded galleryimg" width="250" height="250">
+<div class="row text-center mb-2">
+  <div class="col-md-3">
+    <div class="thumbnail galleryimg galleryborder">
+      <a href="img/cg2.jpg">
+        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
+        <div class="caption">
+          <p class="galleryfont">Lorem ipsum...</p>
+        </div>
+      </a>
+    </div>
   </div>
+  <div class="col-md-3">
+    <div class="thumbnail galleryimg galleryborder">
+      <a href="img/cg2.jpg">
+        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
+        <div class="caption">
+          <p class="galleryfont">Lorem ipsum...</p>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-md-3">
+    <div class="thumbnail galleryimg galleryborder">
+      <a href="img/cg2.jpg">
+        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
+        <div class="caption">
+          <p class="galleryfont">Lorem ipsum...</p>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-md-3">
+    <div class="thumbnail galleryimg galleryborder">
+      <a href="img/cg2.jpg">
+        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
+        <div class="caption">
+          <p class="galleryfont">Lorem ipsum...</p>
+        </div>
+      </a>
+    </div>
+  </div>
+</div>
+<div class="row text-center mb-2">
+  <div class="col-md-3">
+    <div class="thumbnail galleryimg galleryborder">
+      <a href="img/cg2.jpg">
+        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
+        <div class="caption">
+          <p class="galleryfont">Lorem ipsum...</p>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-md-3">
+    <div class="thumbnail galleryimg galleryborder">
+      <a href="img/cg2.jpg">
+        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
+        <div class="caption">
+          <p class="galleryfont">Lorem ipsum...</p>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-md-3">
+    <div class="thumbnail galleryimg galleryborder">
+      <a href="img/cg2.jpg">
+        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
+        <div class="caption">
+          <p class="galleryfont">Lorem ipsum...</p>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-md-3">
+    <div class="thumbnail galleryimg galleryborder">
+      <a href="img/cg2.jpg">
+        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
+        <div class="caption">
+          <p class="galleryfont">Lorem ipsum...</p>
+        </div>
+      </a>
+    </div>
+  </div>
+</div>
 
   <div class="container text-center">
     <h2 class="mb-5">← 2017 →</h2>
   </div>
 
-  <div class="container-fluid text-center mb-4">
-    <img src="img/cg1.jpg" class="rounded galleryimg" width="250" height="250">
-    <img src="img/cg1.jpg" class="rounded galleryimg mx-3" width="250" height="250">
-    <img src="img/cg1.jpg" class="rounded galleryimg" width="250" height="250">
-    <img src="img/cg1.jpg" class="rounded galleryimg mx-3" width="250" height="250">
-    <img src="img/cg1.jpg" class="rounded galleryimg" width="250" height="250">
+ <div class="row text-center mb-2">
+  <div class="col-md-3">
+    <div class="thumbnail galleryimg galleryborder">
+      <a href="img/cg2.jpg">
+        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
+        <div class="caption">
+          <p class="galleryfont">Lorem ipsum...</p>
+        </div>
+      </a>
+    </div>
   </div>
-
-  <div class="container-fluid text-center mb-4">
-    <img src="img/cg1.jpg" class="rounded galleryimg" width="250" height="250">
-    <img src="img/cg1.jpg" class="rounded galleryimg mx-3" width="250" height="250">
-    <img src="img/cg1.jpg" class="rounded galleryimg" width="250" height="250">
-    <img src="img/cg1.jpg" class="rounded galleryimg mx-3" width="250" height="250">
-    <img src="img/cg1.jpg" class="rounded galleryimg" width="250" height="250">
+  <div class="col-md-3">
+    <div class="thumbnail galleryimg galleryborder">
+      <a href="img/cg2.jpg">
+        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
+        <div class="caption">
+          <p class="galleryfont">Lorem ipsum...</p>
+        </div>
+      </a>
+    </div>
   </div>
+  <div class="col-md-3">
+    <div class="thumbnail galleryimg galleryborder">
+      <a href="img/cg2.jpg">
+        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
+        <div class="caption">
+          <p class="galleryfont">Lorem ipsum...</p>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-md-3">
+    <div class="thumbnail galleryimg galleryborder">
+      <a href="img/cg2.jpg">
+        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
+        <div class="caption">
+          <p class="galleryfont">Lorem ipsum...</p>
+        </div>
+      </a>
+    </div>
+  </div>
+</div>
+<div class="row text-center mb-2">
+  <div class="col-md-3">
+    <div class="thumbnail galleryimg galleryborder">
+      <a href="img/cg2.jpg">
+        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
+        <div class="caption">
+          <p class="galleryfont">Lorem ipsum...</p>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-md-3">
+    <div class="thumbnail galleryimg galleryborder">
+      <a href="img/cg2.jpg">
+        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
+        <div class="caption">
+          <p class="galleryfont">Lorem ipsum...</p>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-md-3">
+    <div class="thumbnail galleryimg galleryborder">
+      <a href="img/cg2.jpg">
+        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
+        <div class="caption">
+          <p class="galleryfont">Lorem ipsum...</p>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-md-3">
+    <div class="thumbnail galleryimg galleryborder">
+      <a href="img/cg2.jpg">
+        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
+        <div class="caption">
+          <p class="galleryfont">Lorem ipsum...</p>
+        </div>
+      </a>
+    </div>
+  </div>
+</div>
 
   <div class="container text-center">
     <h2 class="mb-5">← 2016 →</h2>
   </div>
 
-  <div class="container-fluid text-center mb-4">
-    <img src="img/cg1.jpg" class="rounded galleryimg" width="250" height="250">
-    <img src="img/cg1.jpg" class="rounded galleryimg mx-3" width="250" height="250">
-    <img src="img/cg1.jpg" class="rounded galleryimg" width="250" height="250">
-    <img src="img/cg1.jpg" class="rounded galleryimg mx-3" width="250" height="250">
-    <img src="img/cg1.jpg" class="rounded galleryimg" width="250" height="250">
+  <div class="row text-center mb-2">
+  <div class="col-md-3">
+    <div class="thumbnail galleryimg galleryborder">
+      <a href="img/cg2.jpg">
+        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
+        <div class="caption">
+          <p class="galleryfont">Lorem ipsum...</p>
+        </div>
+      </a>
+    </div>
   </div>
-
-  <div class="container-fluid text-center mb-4">
-    <img src="img/cg1.jpg" class="rounded galleryimg" width="250" height="250">
-    <img src="img/cg1.jpg" class="rounded galleryimg mx-3" width="250" height="250">
-    <img src="img/cg1.jpg" class="rounded galleryimg" width="250" height="250">
-    <img src="img/cg1.jpg" class="rounded galleryimg mx-3" width="250" height="250">
-    <img src="img/cg1.jpg" class="rounded galleryimg" width="250" height="250">
+  <div class="col-md-3">
+    <div class="thumbnail galleryimg galleryborder">
+      <a href="img/cg2.jpg">
+        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
+        <div class="caption">
+          <p class="galleryfont">Lorem ipsum...</p>
+        </div>
+      </a>
+    </div>
   </div>
-  
+  <div class="col-md-3">
+    <div class="thumbnail galleryimg galleryborder">
+      <a href="img/cg2.jpg">
+        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
+        <div class="caption">
+          <p class="galleryfont">Lorem ipsum...</p>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-md-3">
+    <div class="thumbnail galleryimg galleryborder">
+      <a href="img/cg2.jpg">
+        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
+        <div class="caption">
+          <p class="galleryfont">Lorem ipsum...</p>
+        </div>
+      </a>
+    </div>
+  </div>
+</div>
 
 </div>
 
