--- a/index.html
+++ b/index.html
@@ -124,22 +124,25 @@
       <div class="carousel-item active">
         <img class="d-block w-100 cimgsize" src="img/cg1.jpg" alt="Pierwszy slajd">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Test1</h5>
-            <p>Test1</p>
+            <div class="carouseltext">
+              <h3 class="carouselheading">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</h3>
+            </div>
           </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100 cimgsize" src="img/cg2.jpg" alt="Drugi slajde">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Test2</h5>
-            <p>Test2</p>
+            <div class="carouseltext">
+              <h3 class="carouselheading">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</h3>
+            </div>
           </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100 cimgsize" src="img/cg3.jpg" alt="Trzeci slajd">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Test3</h5>
-            <p>Test3</p>
+            <div class="carouseltext">
+              <h3 class="carouselheading">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</h3>
+            </div>
           </div>
       </div>
     </div>
@@ -356,7 +359,7 @@
         $('nav').removeClass('logoscroll');
       }
     });
-    
+
 </script>
 
 </body>
