--- a/gallery.html
+++ b/gallery.html
@@ -31,6 +31,10 @@
 
   <!-- twoje style -->
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/lightbox.min.css">
+  <script type="text/javascript" src="js/lightbox-plus-jquery.min.js"></script>
+
+
 </head>
 <body>
 
@@ -127,131 +131,48 @@
     <h2 class="mb-5">← 2018 →</h2>
   </div>
 
-<div class="row text-center mb-2">
+<div class="row text-center mb-3">
   <div class="col-md-3">
-    <div class="thumbnail galleryimg galleryborder">
-      <a href="img/cg2.jpg">
-        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
-        <div class="caption">
-          <p class="galleryfont">Lorem ipsum...</p>
-        </div>
-      </a>
-    </div>
+    <a href="img/cg1.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg1.jpg" width="425" height="250"></a>
   </div>
   <div class="col-md-3">
-    <div class="thumbnail galleryimg galleryborder">
-      <a href="img/cg2.jpg">
-        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
-        <div class="caption">
-          <p class="galleryfont">Lorem ipsum...</p>
-        </div>
-      </a>
-    </div>
+    <a href="img/cg2.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg2.jpg" width="425" height="250"></a>
   </div>
   <div class="col-md-3">
-    <div class="thumbnail galleryimg galleryborder">
-      <a href="img/cg2.jpg">
-        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
-        <div class="caption">
-          <p class="galleryfont">Lorem ipsum...</p>
-        </div>
-      </a>
-    </div>
+    <a href="img/cg3.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg3.jpg" width="425" height="250"></a>
   </div>
   <div class="col-md-3">
-    <div class="thumbnail galleryimg galleryborder">
-      <a href="img/cg2.jpg">
-        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
-        <div class="caption">
-          <p class="galleryfont">Lorem ipsum...</p>
-        </div>
-      </a>
-    </div>
+    <a href="img/cg6.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg6.jpg" width="425" height="250"></a>
   </div>
 </div>
 
-<div class="row text-center mb-2">
+<div class="row text-center mb-3">
   <div class="col-md-3">
-    <div class="thumbnail galleryimg galleryborder">
-      <a href="img/cg2.jpg">
-        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
-        <div class="caption">
-          <p class="galleryfont">Lorem ipsum...</p>
-        </div>
-      </a>
-    </div>
+    <a href="img/cg1.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg1.jpg" width="425" height="250"></a>
   </div>
   <div class="col-md-3">
-    <div class="thumbnail galleryimg galleryborder">
-      <a href="img/cg2.jpg">
-        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
-        <div class="caption">
-          <p class="galleryfont">Lorem ipsum...</p>
-        </div>
-      </a>
-    </div>
+    <a href="img/cg2.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg2.jpg" width="425" height="250"></a>
   </div>
   <div class="col-md-3">
-    <div class="thumbnail galleryimg galleryborder">
-      <a href="img/cg2.jpg">
-        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
-        <div class="caption">
-          <p class="galleryfont">Lorem ipsum...</p>
-        </div>
-      </a>
-    </div>
+    <a href="img/cg4.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg4.jpg" width="425" height="250"></a>
   </div>
   <div class="col-md-3">
-    <div class="thumbnail galleryimg galleryborder">
-      <a href="img/cg2.jpg">
-        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
-        <div class="caption">
-          <p class="galleryfont">Lorem ipsum...</p>
-        </div>
-      </a>
-    </div>
+    <a href="img/cg5.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg5.jpg" width="425" height="250"></a>
   </div>
 </div>
-<div class="row text-center mb-2">
+
+<div class="row text-center mb-3">
   <div class="col-md-3">
-    <div class="thumbnail galleryimg galleryborder">
-      <a href="img/cg2.jpg">
-        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
-        <div class="caption">
-          <p class="galleryfont">Lorem ipsum...</p>
-        </div>
-      </a>
-    </div>
+    <a href="img/cg1.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg1.jpg" width="425" height="250"></a>
   </div>
   <div class="col-md-3">
-    <div class="thumbnail galleryimg galleryborder">
-      <a href="img/cg2.jpg">
-        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
-        <div class="caption">
-          <p class="galleryfont">Lorem ipsum...</p>
-        </div>
-      </a>
-    </div>
+    <a href="img/cg2.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg2.jpg" width="425" height="250"></a>
   </div>
   <div class="col-md-3">
-    <div class="thumbnail galleryimg galleryborder">
-      <a href="img/cg2.jpg">
-        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
-        <div class="caption">
-          <p class="galleryfont">Lorem ipsum...</p>
-        </div>
-      </a>
-    </div>
+    <a href="img/cg3.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg3.jpg" width="425" height="250"></a>
   </div>
   <div class="col-md-3">
-    <div class="thumbnail galleryimg galleryborder">
-      <a href="img/cg2.jpg">
-        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
-        <div class="caption">
-          <p class="galleryfont">Lorem ipsum...</p>
-        </div>
-      </a>
-    </div>
+    <a href="img/cg6.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg6.jpg" width="425" height="250"></a>
   </div>
 </div>
 
@@ -259,88 +180,33 @@
     <h2 class="mb-5">← 2017 →</h2>
   </div>
 
- <div class="row text-center mb-2">
+<div class="row text-center mb-3">
   <div class="col-md-3">
-    <div class="thumbnail galleryimg galleryborder">
-      <a href="img/cg2.jpg">
-        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
-        <div class="caption">
-          <p class="galleryfont">Lorem ipsum...</p>
-        </div>
-      </a>
-    </div>
+    <a href="img/cg1.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg1.jpg" width="425" height="250"></a>
   </div>
   <div class="col-md-3">
-    <div class="thumbnail galleryimg galleryborder">
-      <a href="img/cg2.jpg">
-        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
-        <div class="caption">
-          <p class="galleryfont">Lorem ipsum...</p>
-        </div>
-      </a>
-    </div>
+    <a href="img/cg2.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg2.jpg" width="425" height="250"></a>
   </div>
   <div class="col-md-3">
-    <div class="thumbnail galleryimg galleryborder">
-      <a href="img/cg2.jpg">
-        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
-        <div class="caption">
-          <p class="galleryfont">Lorem ipsum...</p>
-        </div>
-      </a>
-    </div>
+    <a href="img/cg4.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg4.jpg" width="425" height="250"></a>
   </div>
   <div class="col-md-3">
-    <div class="thumbnail galleryimg galleryborder">
-      <a href="img/cg2.jpg">
-        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
-        <div class="caption">
-          <p class="galleryfont">Lorem ipsum...</p>
-        </div>
-      </a>
-    </div>
+    <a href="img/cg5.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg5.jpg" width="425" height="250"></a>
   </div>
 </div>
-<div class="row text-center mb-2">
+
+<div class="row text-center mb-3">
   <div class="col-md-3">
-    <div class="thumbnail galleryimg galleryborder">
-      <a href="img/cg2.jpg">
-        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
-        <div class="caption">
-          <p class="galleryfont">Lorem ipsum...</p>
-        </div>
-      </a>
-    </div>
+    <a href="img/cg1.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg1.jpg" width="425" height="250"></a>
   </div>
   <div class="col-md-3">
-    <div class="thumbnail galleryimg galleryborder">
-      <a href="img/cg2.jpg">
-        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
-        <div class="caption">
-          <p class="galleryfont">Lorem ipsum...</p>
-        </div>
-      </a>
-    </div>
+    <a href="img/cg2.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg2.jpg" width="425" height="250"></a>
   </div>
   <div class="col-md-3">
-    <div class="thumbnail galleryimg galleryborder">
-      <a href="img/cg2.jpg">
-        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
-        <div class="caption">
-          <p class="galleryfont">Lorem ipsum...</p>
-        </div>
-      </a>
-    </div>
+    <a href="img/cg3.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg3.jpg" width="425" height="250"></a>
   </div>
   <div class="col-md-3">
-    <div class="thumbnail galleryimg galleryborder">
-      <a href="img/cg2.jpg">
-        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
-        <div class="caption">
-          <p class="galleryfont">Lorem ipsum...</p>
-        </div>
-      </a>
-    </div>
+    <a href="img/cg6.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg6.jpg" width="425" height="250"></a>
   </div>
 </div>
 
@@ -348,46 +214,18 @@
     <h2 class="mb-5">← 2016 →</h2>
   </div>
 
-  <div class="row text-center mb-2">
+<div class="row text-center mb-3">
   <div class="col-md-3">
-    <div class="thumbnail galleryimg galleryborder">
-      <a href="img/cg2.jpg">
-        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
-        <div class="caption">
-          <p class="galleryfont">Lorem ipsum...</p>
-        </div>
-      </a>
-    </div>
+    <a href="img/cg1.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg1.jpg" width="425" height="250"></a>
   </div>
   <div class="col-md-3">
-    <div class="thumbnail galleryimg galleryborder">
-      <a href="img/cg2.jpg">
-        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
-        <div class="caption">
-          <p class="galleryfont">Lorem ipsum...</p>
-        </div>
-      </a>
-    </div>
+    <a href="img/cg2.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg2.jpg" width="425" height="250"></a>
   </div>
   <div class="col-md-3">
-    <div class="thumbnail galleryimg galleryborder">
-      <a href="img/cg2.jpg">
-        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
-        <div class="caption">
-          <p class="galleryfont">Lorem ipsum...</p>
-        </div>
-      </a>
-    </div>
+    <a href="img/cg3.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg3.jpg" width="425" height="250"></a>
   </div>
   <div class="col-md-3">
-    <div class="thumbnail galleryimg galleryborder">
-      <a href="img/cg2.jpg">
-        <img class="rounded" src="img/cg2.jpg" alt="" width="100%" height="250">
-        <div class="caption">
-          <p class="galleryfont">Lorem ipsum...</p>
-        </div>
-      </a>
-    </div>
+    <a href="img/cg6.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg6.jpg" width="425" height="250"></a>
   </div>
 </div>
 
@@ -474,6 +312,7 @@
         $('nav').removeClass('logoscroll');
       }
     });
+
     
 </script>
 
